PR/50909: David Binderman: Optimize memset